# jsar-runtime

./: .clang-format  .gitignore  08-06 20:50:32.crashtext  CMakeLists.txt  Cargo.toml  README.md  azure-pipelines.yml  build-docs.js  eslint.config.mjs  makefile  package-lock.json  package.json  setenv_android_toolchain.sh  tsconfig.json  webpack.config.cjs
.cargo/: config
.circleci/: config.yml
.github/workflows/: build-android.yml  build-windows.yml  build.yml  ci.yml  lint.yml  publish-webapis.yml  release.yml
cmake/: TransmuteCXXFlags.cmake  TransmuteClient.cmake  TransmuteCommon.cmake  TransmuteCore.cmake  TransmuteHTTPParser.cmake  TransmuteNodeAddon.cmake  TransmuteProto.cmake  TransmuteTests.cmake
crates/html_renderer/: Cargo.toml  README.md  document.rs  events.rs  htmlsink.rs  lib.rs  node.rs  stylo.rs  util.rs
crates/jsbinding_macro/: Cargo.toml  lib.rs
crates/jsbindings/: .gitignore  Cargo.toml  bindings.base.h  bindings.css-inl.hpp  bindings.css.hpp  bindings.hpp  bindings.layout.hpp  bindings.texture_atlas.hpp  bindings.webgl.hpp  build.rs  cbindgen.toml  css_parser.rs  jsar_jsbindings.h  layout.rs  lib.rs  texture_atlas.rs  typescript_transpiler.rs  webgl.rs
crates/jsbindings/canvas/: mod.rs
crates/jsbindings/css/: mod.rs  properties.rs  selectors.rs
crates/jsbindings/css/stylesheets/: media_rule.rs  mod.rs  style_rule.rs  stylesheet.rs
crates/jsbindings/css/values/: mod.rs  specified.rs
crates/jsbindings/glsl_transpiler/: glsl.rs
crates/jsbindings/htmlrender/: mod.rs
crates/jsbundle/: .gitignore  Cargo.toml  README.md  build.rs  jsar_jsbundle.h  lib.rs
crates/jsbundle_loader/: Cargo.toml  build.rs  test_runner.rs
crates/runtime_apis/: .gitignore  Cargo.toml  README.md  build.rs  jsar_jsbundle.h  lib.rs
crates/shaders/: Cargo.toml  build.rs  lib.rs
crates/shaders/fixtures/: basic.metal  basic.txt  basic.vert
crates/url_parser/: Cargo.toml  build.rs  lib.rs
docs/: development-zh.md  internal-zh.md
docs/api/: embedder.md
docs/changelogs/: alpha.md
docs/contributing/: defferred_composition.md  programming_languages.md  publish_webapis.md
docs/graphics/: README.md  canvas.md  integration.md  webgl-objects.md  webgl.md
docs/manual/: introduction.mdx  quick-start.mdx
fixtures/: .gitignore  README.md  manifest.json
fixtures/html/: attrib-dataset.html  babylon-bounding-box.html  babylon-loader-gltf.html  babylon-lod.html  babylon-sample-particles.html  babylon-sample.html  babylon-sun-particles.html  bug-19209.html  bug-19210.html  bug-19506.html  canvas-chartjs.html  canvas-leaferjs.html  canvas-leaferjs.js  canvas.html  document.html  document.js  dom-nodes.html  element-set-class.html  element-set-style.html  elements.html  errors.html  esm-basics.html  esm-dynamic-imports.html  esm-import-formats.html  esm-import-typescript.html  esm-imports.html  events.html  fonts.html  gh-0038.html  gh-0038.js  gh-0047.html  gh-0048.html  gh-0052.html  gh-0057.html  gh-pr-0052.html  images.html  layout-flexbox-example.html  layout-grid-example.html  load-stylesheet.html  mutation-observers.html  (+41 more)
lib/: bootstrap-babylon.ts  bootstrap-common.ts  bootstrap.ts  main.ts  package.json  polyfills.ts  tsconfig.json
lib/bindings/: env.ts  gom.ts  index.ts  logger.ts  messaging.ts  renderer.ts
lib/events/: error-event.ts  mouse-event.ts  pointer-event.ts
lib/navigator/: index.ts
lib/nodejs-patches/: textdecoder.ts
lib/polyfills/: canvas2d.ts  index.ts  navigator.ts  offscreencanvas.ts  window.ts  xhr2.ts
lib/runtime/: impl-transmute.ts  index.ts
lib/runtime2/: index.ts  index_webxr_simple.ts
lib/webcanvas/: index.ts
lib/webgl/: WebGL2RenderingContext.ts  WebGLMatrix.ts  WebGLRenderingContext.ts  WebGLShaderPrecisionFormat.ts  index.ts  utils.ts
lib/webgl-examples/: cube.ts  textures.ts
lib/webworkers/: entry.ts  worker.ts
lib/webxr/: XRSession.ts  XRSystem.ts  device.ts  index.ts
proto/: transmute_vgom.proto
src/: .gitignore  base.hpp  bindings.hpp  debug.cpp  debug.hpp  idgen.hpp  logger.cpp  logger.hpp
src/analytics/: analytics.cpp  analytics.hpp
src/client/: bindings.hpp  classes.hpp  entry.cpp  entry.hpp  hive_server.cpp  hive_server.hpp  macros.h  main.cpp  per_process.cpp  per_process.hpp
src/common/: README.md  classes.hpp  command_buffers.cpp  command_buffers.hpp  debug.cpp  debug.hpp  ipc.cpp  ipc.hpp  ipc_message.hpp  ipc_serializable.hpp  math_utils.hpp  messages.hpp  options.hpp  scoped_thread.hpp  utility.hpp  viewport.hpp  zone.hpp
src/dom/: document.hpp  node.hpp  parser.hpp
src/examples/: README.md  desktop_opengl.cpp  stat_panel.hpp  window_ctx-inl.hpp  window_ctx.hpp  xr_renderer.hpp
src/http/: llhttp.c  llhttp.h  request_builder.hpp
src/math/: matrix.cpp  matrix.hpp  mesh.cpp  mesh.hpp  quat.hpp  vector.cpp  vector.hpp  vectors.hpp
src/proto/: transmute_vgom.proto
src/pugixml/: README.md  pugiconfig.hpp  pugixml.cpp  pugixml.hpp
src/renderer/: command_buffer.hpp  constants.hpp  content_renderer.cpp  content_renderer.hpp  render_api.cpp  render_api.hpp  render_api_metal.mm  render_api_opengles.cpp  renderer.cpp  renderer.hpp
src/runtime/: .gitignore  constellation.cpp  constellation.hpp  content.cpp  content.hpp  content_manager.cpp  content_manager.hpp  debug.cpp  embedder.cpp  embedder.hpp  entry.cpp  entry.hpp  gom.hpp  hive_daemon.cpp  hive_daemon.hpp  inspector.cpp  inspector.hpp  inspector_client.cpp  inspector_client.hpp  inspector_server.cpp  inspector_server.hpp  jsbundle.h.in  jsframework.h.in  logger.cpp  logger.hpp  macros.h  media_manager.cpp  media_manager.hpp  native_event.cpp  native_event.hpp  node_bootstrapper.cpp  node_bootstrapper.hpp  per_process.cpp  per_process.hpp  platform_base.hpp  vector.hpp  (+2 more)
tests/: command_buffers_base.cpp  idgen.cpp  math.cpp  runtime.cpp  viewport.cpp
tools/: build_skia.sh  clang-format-check.sh  clang-format-fix.sh  download-aliyun.mjs  generate_binary_header.sh  generate_shaders_header.cmake  printversion.cjs  publish-webapis.cjs  upload-aliyun.mjs
types/: nodejs-patch.d.ts  transmute-private.d.ts  transmute-webapis.d.ts
(+987 files in other folders)
