[workspace]
resolver = "2"
members = ["crates/jsbindings", "crates/jsbundle"]

[workspace.dependencies]
app_units = "0.7"
backtrace = "0.3"
base64 = "0.21.7"
bitflags = "2.5"
cfg-if = "1.0.0"
content-security-policy = { version = "0.5", features = ["serde"] }
cookie = "0.12"
cssparser = { version = "0.34", features = ["serde"] }
cxx = { version = "1.0" }
cxx-build = { version = "1.0" }
data-url = "0.3.1"
euclid = "0.22"
fnv = "1.0"
getopts = "0.2.11"
gleam = "0.15"
glsl-lang = { version = "0.7.2", features = ["lexer-v2-full"] }
glsl-lang-pp = { version = "0.7.2", features = ["full"] }
headers = "0.3"
hyper = "0.14"
hyper-rustls = { version = "0.24", default-features = false, features = [
  "acceptor",
  "http1",
  "http2",
  "logging",
  "tls12",
  "webpki-tokio",
] }
jemallocator = "0.5.4"
jemalloc-sys = "0.5.4"
keyboard-types = "0.6"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
mime = "0.3.13"
mime_guess = "2.0.3"
num_cpus = "1.1.0"
num-traits = "0.2"
parking_lot = "0.12"
percent-encoding = "2.3"
proc-macro2 = "1"
quote = "1"
serde = "1.0.198"
serde_bytes = "0.11"
serde_json = "1.0"
servo_arc = { git = "https://github.com/servo/stylo", branch = "2024-12-04" }
servo_atoms = { git = "https://github.com/servo/stylo", branch = "2024-12-04" }
slab = "0.4.9"
smallvec = "1.13"
string_cache = "0.8.7"
style = { git = "https://github.com/servo/stylo", branch = "2024-12-04", features = [
  "servo",
] }
style_config = { git = "https://github.com/servo/stylo", branch = "2024-12-04" }
style_traits = { git = "https://github.com/servo/stylo", branch = "2024-12-04", features = [
  "servo",
] }
selectors = { git = "https://github.com/servo/stylo", branch = "2024-12-04" }
surfman = "0.9.2"
syn = { version = "2", default-features = false, features = [
  "clone-impls",
  "derive",
  "parsing",
] }
taffy = { version = "0.7.5" }
time = "0.1.41"
url = "2.5"
uuid = { version = "1.8.0", features = ["v4"] }
