[package]
name = "jsar_jsbindings"
version = "1.0.0"
authors = ["The JSAR Project Developers"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
name = "jsar_jsbindings"
crate-type = ["staticlib"]
path = "lib.rs"

[features]
experimental = []

[dependencies]
ctor = "0.1"
cssparser = { workspace = true }
euclid = "*"
lazy_static = "1.4.0"
log = "0.4.21"
once_cell = "1.17.1"
surfman = "0.9.2"
gl = { version = "0.14.0" }
glsl-lang = { version = "=0.6.0", features = [
  "lexer-v2-full",
  "parser-expr",
  "parser-statement",
] }
glsl-lang-pp = { version = "=0.6.0" }
jsar_jsbinding_macro = { path = "../jsbinding_macro" }
style = { workspace = true }
style_traits = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"
