[package]
name = "jsar_jsbindings"
version = "1.0.0"
authors = ["The JSAR Project Developers"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
name = "jsar_jsbindings"
crate-type = ["staticlib"]
path = "lib.rs"

[features]
experimental = []

[dependencies]
anyhow = "1.0.89"
ctor = "0.1"
cssparser = { workspace = true }
euclid = "*"
lazy_static = "1.4.0"
log = "0.4.21"
once_cell = "1.17.1"
surfman = "0.9.2"
taffy = { workspace = true }
gl = { version = "0.14.0" }
glsl-lang = { workspace = true }
glsl-lang-pp = { workspace = true }
jsar_jsbinding_macro = { path = "../jsbinding_macro" }
smallvec = { version = "1.13.2" }
selectors = { workspace = true }
style = { workspace = true }
style_config = { workspace = true }
style_traits = { workspace = true }
swc_common = "0.40.2"
swc_error_reporters = { version = "1.0.0" }
swc_fast_ts_strip = { version = "0.12.0" }
url = { workspace = true }

[build-dependencies]
cbindgen = "0.27.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.3"
